metadata/force-app/main/default/objects/CustomName_MVbhQ__c/CustomName_MVbhQ__c.object-meta.xml
<CustomObject>
    <description>Description_DspbT</description>
    <label>CustomLabel_kMlsi</label>
    <nameField>
        <label>CustomLabel_kMlsi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_kMlsis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>