metadata/force-app/main/default/objects/CustomName_MVbhQ__c/fields/CustomField_lYmwF__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lYmwF__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwCMWW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>