metadata/force-app/main/default/objects/CustomName_MVbhQ__c/fields/CustomField_wmmHb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_wmmHb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldCRmcI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>